--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "primereact": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
